# agoffice

./: pyproject.toml
.github/workflows/: push-worker.yml
deploy/compose/: docker-compose.yml  worker-compose.yml
deploy/docker/: Dockerfile  worker-dual.Dockerfile  worker-noob.Dockerfile  worker-pro.Dockerfile  worker.Dockerfile
deploy/k8s/: noob-network-policy.yaml
scripts/dev/: push-worker-local.sh
services/api/src/agcode_api/: main.py
services/api/src/agcode_api/realtime/: socketio_proxy.py
services/api/src/agcode_api/routers/: mission.py  session.py
services/api/src/agoffice_api/: main.py
services/api/src/agoffice_api/realtime/: socketio_proxy.py
services/api/src/agoffice_api/routers/: mission.py  room.py  session.py
services/worker/sidecar/: Dockerfile  main.py
services/worker/src/agcode_worker/: main.py
services/worker/src/agcode_worker/routers/: chat_pro.py  tunnel.py
services/worker/src/agcode_worker/services/: pro_chat.py  pro_chat_claude.py  pro_chat_codex.py  vscode_tunnel.py
services/worker/src/agoffice_worker/: main.py
services/worker/src/agoffice_worker/asyncapi/: realtime_chat.yaml
services/worker/src/agoffice_worker/routers/: __init__.py  chat_pro.py  tunnel.py
services/worker/src/agoffice_worker/services/: chat_transport.py  pro_chat.py  pro_chat_claude.py  pro_chat_codex.py  vscode_tunnel.py
services/worker_noob/: entrypoint.sh  noob_runner.mjs
